Custom Record Page/Test/force-app/main/default/objects/Layout_Version__c/Layout_Version__c.object-meta.xml
<CustomObject>
    <description>Stores a specific version of a dynamic layout configuration.</description>
    <label>Layout Version</label>
    <nameField>
        <displayFormat>LV-{000000}</displayFormat>
        <label>Layout Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Layout Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>