Custom Record Page/Test/force-app/main/default/objects/Layout_Version__c/fields/Custom_Record_Page__c.field-meta.xml
<CustomField>
    <fullName>Custom_Record_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom Record Page</label>
    <referenceTo>Custom_Record_Page__c</referenceTo>
    <relationshipLabel>Layout Versions</relationshipLabel>
    <relationshipName>Layout_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>